[tool.poetry]
name = "data-anonymizer"
version = "0.1.0"
description = "Anonymize your dataset while preserving certain statistical properties."
authors = ["Tom Rochette <tom@tomrochette.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"

[tool.poetry.scripts]
data-anonymizer = "data_anonymizer.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
